<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.personal.TechSupportActivity">
    <include layout="@layout/layout_title_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_txt"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:text="@string/bug_feedback"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="@dimen/low_txt"
        android:textColor="@color/darkGray"
        android:text="@string/call_us"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_txt"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/product_advice"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="@dimen/low_txt"
        android:textColor="@color/darkGray"
        android:text="@string/call_us"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_txt"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/after_sales_service"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="@dimen/low_txt"
        android:textColor="@color/darkGray"
        android:text="@string/call_us"/>


</LinearLayout>