<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.personal.PasswordManagement.BackPasswordActivity">
    <include layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_txt"
            android:text="@string/account"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:met_hideUnderline="true"
            app:met_textColorHint="@color/lightGray"
            android:textSize="@dimen/medium_txt"
            android:hint="请输入手机号/邮箱"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_txt"
            android:text="@string/authentication_code"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_authentication_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            app:met_hideUnderline="true"
            app:met_textColorHint="@color/lightGray"
            android:textSize="@dimen/medium_txt"
            android:hint="请输入验证码"/>
        <Button
            android:id="@+id/btn_get_authentication_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/low_txt"
            android:text="@string/get_authentication_code"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_confirm_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/medium_txt"
        android:textColor="@color/white"
        android:text="@string/next_step"
        android:background="@drawable/bg_btn_circle_green"/>

</LinearLayout>