<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    tools:context=".ui.personal.PasswordManagement.ModifyPasswordActivity">
    <include layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_txt"
            android:text="@string/old_password"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:met_hideUnderline="true"
            app:met_textColorHint="@color/lightGray"
            android:textSize="@dimen/medium_txt"
            android:hint="请输入6-16位旧密码验证"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_txt"
            android:text="@string/new_password"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:met_hideUnderline="true"
            app:met_textColorHint="@color/lightGray"
            android:textSize="@dimen/medium_txt"
            android:hint="请输入6-16位新密码"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_txt"
            android:text="@string/confirm_password"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            app:met_hideUnderline="true"
            app:met_textColorHint="@color/lightGray"
            android:textSize="@dimen/medium_txt"
            android:hint="再次输入6-16位新密码"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_confirm_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/medium_txt"
        android:textColor="@color/white"
        android:text="@string/confirm_modify"
        android:background="@drawable/bg_btn_circle_green"/>

</LinearLayout>